tests/ui/discord-frontend/entity_macro/expected_literal_3.stderr
error: expected string literal
  --> tests/ui/discord-frontend/entity_macro/expected_literal_3.rs:35:15
   |
LL |     assume = [true],
   |               ^^^^

error: aborting due to 1 previous error

